--- a/index.html
+++ b/index.html
@@ -121,10 +121,11 @@
                 <button onclick="changeGHMult()" id="multGHButton">Мульти-Травохоп: <span id="multGHOption">ВЫКЛ</span></button>
                 <button onclick="changeGSMult()" id="multGSButton">Мульти-Травоскип: <span id="multGSOption">ВЫКЛ</span></button>
                 <br><br>
-                Really Grass Cutting Incremental - v0.5.3 - Made by MrRedShark77<br>
-                The game inspired by <a href="https://www.roblox.com/games/9292879820">Grass Cutting Incremental</a><br>
-                Artist(-s): Bézier<br>
-                <b class="red">Warning! Recommended size is 1920x1080! You may change zoom!</b><br><br>
+                Really Grass Cutting Incremental - v0.5.3 - Сделал MrRedShark77<br>
+                Вдохновлено <a href="https://www.roblox.com/games/9292879820">Grass Cutting Incremental</a><br>
+                Художник(и): Bézier<br>
+                Перевод: Gibridka (Гибридка)<br>
+                <b class="red">Внимание! Рекомендуемый размер - 1920x1080! Вы можете менять масштаб!</b><br><br>
                 <details>
                     <summary>Концовка (СПОЙЛЕР)</summary>
                     Уровень 1e245+; Тип Суперновы 16; Затмение: 4 Qt+; Битва 2,200,000+; ХСП 16;
