--- a/lunarian.html
+++ b/lunarian.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/grass.png">
-    <title>Lunarian World</title>
+    <title>Мир Лунолюдов</title>
 
     <script src="js/perlin.js"></script>
     <script src="js/break_eternity.js"></script>
@@ -30,16 +30,16 @@
             <h1>Game Over!</h1>
         </div><div class="table_center" style="height: calc(100% - 120px); width: 100%;">
             <div style="width: 33%;">
-                <div style="height: 40px;"><h2>Stats</h2></div>
+                <div style="height: 40px;"><h2>Характеристики:</h2></div>
                 <div id="end_stats"></div>
             </div><div style="width: 67%;">
-                <div style="height: 40px;"><h2>Items Found</h2></div>
+                <div style="height: 40px;"><h2>Найдены предметы:</h2></div>
                 <div id="lunar_items_found">
                     
                 </div>
             </div>
         </div><div style="height: 60px;">
-            <button id="leave_button" onclick="window.open('index.html','_self')">Leave to the Star</button>
+            <button id="leave_button" onclick="window.open('index.html','_self')">Уйти к Звездам</button>
         </div>
     </div>
 </body>
